# Telescan-api

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yaml  main.py  pyproject.toml
src/api/v1/server/: __init__.py
src/api/v1/server/routers/: __init__.py  code_r.py  routing.py
src/core/: config.py
src/core/db/: __init__.py  client.py  conf.py
src/core/db/models/: users.py
src/core/log/: __init__.py
src/core/s3/: __init__.py  s3_client.py
src/core/schemas/api_schemas/: __init__.py  _description_app.py  api.py  user_schema.py
src/core/schemas/request_schemas/: __init__.py  requests.py
src/core/schemas/response_schemas/: __init__.py  responses.py
