[project]
dependencies = [
  "beanie>=2.0.0",
  "dotenv>=0.9.9",
  "fastapi>=0.121.1",
  "orjson>=3.11.4",
  "pydantic-settings>=2.12.0",
  "pymongo>=4.15.4",
  "pytest-asyncio>=1.3.0",
  "uvicorn>=0.38.0",
]
description = "Add your description here"
name = "telescan-api"
readme = "README.md"
requires-python = ">=3.13"
version = "0.1.0"
